file browser "hide invisible" doesn't hide anything #21658

Closed
opened 2010-03-18 00:57:15 +01:00 by michael williamson · 4 comments

%%%Recently the file browser has stopped hiding folders/files with a "." at the start of the filename (linux convention for a hidden ) when the "hide invisible" flag is set...

r27472

Ubuntu 9.10 64bit nvidia go 6150 driver "non free" 185.18.36%%%

%%%Recently the file browser has stopped hiding folders/files with a "." at the start of the filename (linux convention for a hidden ) when the "hide invisible" flag is set... r27472 Ubuntu 9.10 64bit nvidia go 6150 driver "non free" 185.18.36%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%I had a look at this one, thought it was simple but seems a bit more complicated than I thought- there are a few layers to the 'hide_dot' info that I'd have to change. I think it's just a matter of migrating the hide dot file operator to the RNA update function, and using context_set in the keymap.

So I'll assign this to Andrea rather than poke in her code too much - Andrea, let me know if you're busy, and I can look at it again.%%%

%%%I had a look at this one, thought it was simple but seems a bit more complicated than I thought- there are a few layers to the 'hide_dot' info that I'd have to change. I think it's just a matter of migrating the hide dot file operator to the RNA update function, and using context_set in the keymap. So I'll assign this to Andrea rather than poke in her code too much - Andrea, let me know if you're busy, and I can look at it again.%%%
Member

%%%Fixed in rev. 27622.

Thanks Matt for leaving this open for me. I wanted to remove that global hide_dot for a long time ;)

Also gave me possibility to revisit filtering for append/link which was a quick fix.

Andrea
%%%

%%%Fixed in rev. 27622. Thanks Matt for leaving this open for me. I wanted to remove that global hide_dot for a long time ;) Also gave me possibility to revisit filtering for append/link which was a quick fix. Andrea %%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#21658
No description provided.