Fix [#21658] file browser "hide invisible" doesn't hide anything - moved global hide_dot to filelist. - hiding dot files is now included in the filtering of files, which means that for this directory also doesn't have to be read anymore. - reverted changes of rev. 27491 and related changes in rev. 27523 in favor of a more general abstraction for the different 'file browser modes' with respect to filtering.