source/blender/editors/space_file/filesel.c
@@ -194,7 +194,6 @@ short ED_fileselect_set_params(SpaceFile *sfile)
 		params->filter = 0;
 		params->sort = FILE_SORT_ALPHA;
 	}
-	params->oldflag = params->flag; 
 	return 1;
 }
 
@@ -411,19 +410,7 @@ void file_change_dir(bContext *C, int checkdir)
 			/* could return but just refresh the current dir */
 		}
 		filelist_setdir(sfile->files, sfile->params->dir);
-		/* XXX special case handling 
-		   behaviour of filebrowser changes when 
-		   browsing into .blend file */
-		if (sfile->params->type == FILE_LOADLIB) {
-			char group[GROUP_MAX];
-			char dir[FILE_MAX];
-			if (filelist_islibrary(sfile->files, dir, group)) {
-				sfile->params->flag &= ~FILE_FILTER;
-			} else {
-				/* reset the old flag */
-				sfile->params->flag = sfile->params->oldflag;
-			}
-		}
+		
 		if(folderlist_clear_next(sfile))
 			folderlist_free(sfile->folders_next);
 
